# persistent_supervoxel_tracking

./: .gitignore  CMakeLists.txt  README.md  main.cpp  octree.qmodel  package.xml  persistent_world.files  persistent_world.includes  sequential_sv.qmodel
libs/: CMakeLists.txt
libs/getter/: getter.h  getter.hpp
libs/libfreenect2pclgrabber/: CMakeLists.txt
libs/libfreenect2pclgrabber/include/: k2g.h
libs/pairwise_segmentation/: pairwise_segmentation.h  pairwise_segmentation.hpp
libs/papon/features/: feature.h  normal_3d.h
libs/papon/features/impl/: feature.hpp  normal_3d.hpp
libs/papon/octree/: octree_pointcloud_sequential.h  octree_pointcloud_sequential_container.h
libs/papon/octree/impl/: octree_pointcloud_sequential.hpp
libs/papon/supervoxel/: sequential_supervoxel_clustering.h
libs/papon/supervoxel/impl/: sequential_supervoxel_clustering.hpp
libs/papon/supervoxel/src/: sequential_supervoxel_clustering.cpp
libs/supervoxel_tracker/: supervoxel_tracker.h
libs/supervoxel_tracker/impl/: label_coherence.hpp  supervoxel_tracker.hpp
libs/supervoxel_tracker/src/: supervoxel_tracker.cpp
miscellaneous/: main.cpp  persistent_world.cpp  persistent_world_uml.uxf  pseudocode.txt  threads_time_efficiency.ods  uml.uxf  uml2.uxf  video_test.cpp
src/: persistent_world_node.cpp
